--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,6 +38,10 @@
   version = "1.7.0"
 
 [[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.3.0"
+
+[[constraint]]
   name = "github.com/spf13/viper"
   version = "1.3.1"
 
